AUTOMAKE_OPTIONS = gnu

bin_SCRIPTS = \
	zmdc.pl \
	zmaudit.pl \
	zmfilter.pl \
	zmtrigger.pl \
	zmx10.pl \
	zmwatch.pl \
	zmpkg.pl \
	zmupdate.pl \
	zmvideo.pl \
	zmcontrol-pelco-d.pl \
	zmcontrol-pelco-p.pl \
	zmcontrol-visca.pl \
	zmcontrol-kx-hcm10.pl \
	zmcontrol-axis-v2.pl \
	zmtrack.pl

SUBDIRS = \
    ZoneMinder

EXTRA_DIST = \
	zmdc.pl \
	zmaudit.pl \
	zmfilter.pl \
	zmtrigger.pl \
	zmx10.pl \
	zmwatch.pl \
	zmpkg.pl \
	zmupdate.pl \
	zmvideo.pl \
	zmcontrol-pelco-d.pl \
	zmcontrol-pelco-p.pl \
	zmcontrol-visca.pl \
	zmcontrol-kx-hcm10.pl \
	zmcontrol-axis-v2.pl \
	zmtrack.pl \
	ZoneMinder/Makefile.PL \
	ZoneMinder/README \
	ZoneMinder/Changes \
	ZoneMinder/META.yml \
	ZoneMinder/MANIFEST \
	ZoneMinder/t/ZoneMinder.t \
	ZoneMinder/lib/ZoneMinder.pm \
	ZoneMinder/lib/ZoneMinder/Base.pm.in \
	ZoneMinder/lib/ZoneMinder/Config.pm.in \
	ZoneMinder/lib/ZoneMinder/Debug.pm \
	ZoneMinder/lib/ZoneMinder/Database.pm \
	ZoneMinder/lib/ZoneMinder/SharedMem.pm \
	ZoneMinder/lib/ZoneMinder/ConfigAdmin.pm \
	zm.in

